[package]
name = "co2-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
plotters-iced = "0.9"
plotters = "0.3"
reqwest = {version="0.11", features=["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
web-sys = "0.3.66"
iced_native = "0.10.3"
log = "0.4.20"
dark-light = "1.0.0"

[profile.release]
lto = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = {version = "0.10.0", features=["tokio"]}
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_web = "0.4"
iced = {version="0.10.0", features=["debug"]}
console_log = "1.0"
console_error_panic_hook = "0.1"
